--- a/www.leqom.com/view/item/000000000003.html
+++ b/www.leqom.com/view/item/000000000003.html
@@ -1,9 +1,9 @@
-<form name="formMain" action="https://www.leqom.com/ssl/slogin/" method="post">
-	<input type="hidden" name="type" value="login">
-	<input type="hidden" name="db" value="otv8kaihatsu">
-	<input type="hidden" name="ssl_tempid" value="ac5169b0135cc254bfa47eddaf3ea1aa">
-	<input type="hidden" name="ssl_login_return_url" value="/view/item/000000000003">
-	<input type="hidden" name="opt" value="">
+<form action="https://www.leqom.com/ssl/slogin/" method="post" name="formMain">
+<input name="type" type="hidden" value="login"/>
+<input name="db" type="hidden" value="otv8kaihatsu"/>
+<input name="ssl_tempid" type="hidden" value="882512149f9b579fa17c2475e628e964"/>
+<input name="ssl_login_return_url" type="hidden" value="/view/item/000000000003"/>
+<input name="opt" type="hidden" value=""/>
 </form>
 <script>
 document.formMain.submit();
