--- a/www.leqom.com/view/index.html
+++ b/www.leqom.com/view/index.html
@@ -1,15 +1,13 @@
-<HTML>
+<html lang="en">
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
-
-<!-- Mirrored from www.leqom.com/view/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 24 Jul 2025 02:02:18 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=../error/404.html"><TITLE>Page has moved</TITLE>
-</HEAD>
-<BODY>
-<A HREF="../error/404.html"><h3>Click here...</h3></A>
-</BODY>
+<!-- Mirrored from www.leqom.com/view/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Jul 2025 04:12:54 GMT -->
+<!-- Added by HTTrack --><meta content="text/html;charset=utf-8" http-equiv="content-type"/><!-- /Added by HTTrack -->
+<head>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type"/><meta content="0; URL=../error/404.html" http-equiv="Refresh"/><title>Page has moved</title>
+</head>
+<body>
+<a href="../error/404.html"><h3>Click here...</h3></a>
+</body>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
-
-<!-- Mirrored from www.leqom.com/view/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 24 Jul 2025 02:02:18 GMT -->
-</HTML>
+<!-- Mirrored from www.leqom.com/view/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Jul 2025 04:12:54 GMT -->
+</html>
